--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
-font_family      Liga SFMono Nerd Font
-bold_font        Liga SFMono Nerd Font Bold
-italic_font      Liga SFMono Nerd Font Regular Italic
-bold_italic_font Liga SFMono Nerd Font Bold Italic
+font_family      Hack Nerd Font Mono
+bold_font        Hack Nerd Font Mono Bold
+italic_font      Hack Nerd Font Mono Italic
+bold_italic_font Hack Nerd Font Mono Bold Italic
 font_size 13.0
 hide_window_decorations titlebar-only
 window_margin_width 4
@@ -36,133 +36,21 @@ map cmd+0 goto_tab 10
 map cmd+t launch --type=tab --cwd=current
 map cmd+n launch --type=os-window --cwd=current 
 
+# jump to beginning and end of word
+map alt+left send_text all \x1b\x62
+map alt+right send_text all \x1b\x66
+
+# jump to beginning and end of line
+map cmd+left send_text all \x01
+map cmd+right send_text all \x05
+
 symbol_map U+F0001-U+F1af0 Hack Nerd Font
 symbol_map U+F8FF,U+100000-U+1018C7 SF Pro
-
-# Sonokai
-background #2c2e34
-foreground #e1e3e4
-
-selection_background #3d4455
-selection_foreground #e1e3e4
-
-cursor #e1e3e4
-cursor_text_color background
-
-active_tab_background #2a2f38
-active_tab_foreground #e1e3e4
-active_tab_font_style bold
-inactive_tab_background #2a2f38
-inactive_tab_foreground #e1e3e4
-inactive_tab_font_style normal
-
-# Black
-color0 #181a1c
-color8 #828a9a
-
-# Red
-color1 #ff6578
-color9 #ff6578
-
-# Green
-color2 #9dd274
-color10 #9dd274
-
-# Yellow
-color3 #eacb64
-color11 #eacb64
-
-# Blue
-color4 #72cce8
-color12 #72cce8
-
-# Magenta
-color5 #ba9cf3
-color13 #ba9cf3
-
-# Cyan
-color6 #f69c5e
-color7 #f69c5e
-
-# White
-color7 #e1e3e4
-color15 #e1e3e4
-
-# vim:ft=kitty
-
-## name:     Catppuccin Kitty Mocha
-## author:   Catppuccin Org
-## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/mocha.conf
-## blurb:    Soothing pastel theme for the high-spirited!
-
-# The basic colors
-# foreground              #CDD6F4
-# background              #1E1E2E
-# selection_foreground    #1E1E2E
-# selection_background    #F5E0DC
-
-# Cursor colors
-# cursor                  #F5E0DC
-# cursor_text_color       #1E1E2E
-
-# URL underline color when hovering with mouse
-# url_color               #F5E0DC
-
-# Kitty window border colors
-# active_border_color     #B4BEFE
-# inactive_border_color   #6C7086
-# bell_border_color       #F9E2AF
 
 # OS Window titlebar colors
 wayland_titlebar_color system
 macos_titlebar_color system
 
-# Tab bar colors
-# active_tab_foreground   #11111B
-# active_tab_background   #A6E3A1
-# inactive_tab_foreground #CDD6F4
-# inactive_tab_background #3C3E4F
-# tab_bar_background      #3C3E4F
-
-# Colors for marks (marked text in the terminal)
-# mark1_foreground #1E1E2E
-# mark1_background #B4BEFE
-# mark2_foreground #1E1E2E
-# mark2_background #CBA6F7
-# mark3_foreground #1E1E2E
-# mark3_background #74C7EC
-
-# The 16 terminal colors
-
-# black
-# color0 #45475A
-# color8 #585B70
-
-# red
-# color1 #F38BA8
-# color9 #F38BA8
-
-# green
-# color2  #A6E3A1
-# color10 #A6E3A1
-
-# yellow
-# color3  #F9E2AF
-# color11 #F9E2AF
-
-# blue
-# color4  #89B4FA
-# color12 #89B4FA
-
-# magenta
-# color5  #F5C2E7
-# color13 #F5C2E7
-
-# cyan
-# color6  #94E2D5
-# color14 #94E2D5
-
-# white
-# color7  #BAC2DE
-# color15 #A6ADC8
+# Colorsheme
+background_opacity 0.9
+include colors.conf
